--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%; margin: 0;">
 
 <head>
     <meta charset="utf-8" />
@@ -21,7 +21,7 @@
     <title>JIRA Lite</title>
 </head>
 
-<body>
+<body style="height:100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
